--- a/public/index.html
+++ b/public/index.html
@@ -20,16 +20,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Google font -->
-	  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet" />
 	  <!-- Font Awesome Icon -->
-	  <link rel="stylesheet" href="css/font-awesome.min.css">
+	  <link rel="stylesheet" href="css/font-awesome.min.css" />
     <!-- Bootstrap -->
-		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
 		<!-- Slick -->
-		<link type="text/css" rel="stylesheet" href="css/slick.css"/>
-		<link type="text/css" rel="stylesheet" href="css/slick-theme.css"/>
+		<link type="text/css" rel="stylesheet" href="css/slick.css" />
+		<link type="text/css" rel="stylesheet" href="css/slick-theme.css" />
 		<!-- nouislider -->
-		<link type="text/css" rel="stylesheet" href="css/nouislider.min.css"/>    
+		<!-- <link type="text/css" rel="stylesheet" href="css/nouislider.min.css" />  -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -46,8 +46,8 @@
 		<script src="js/jquery.min.js"></script>
     <script src="js/jquery.zoom.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<script src="js/slick.min.js"></script>
-		<script src="js/nouislider.min.js"></script>		
+		<!-- <script src="js/slick.min.js"></script> -->
+		<!-- <script src="js/nouislider.min.js"></script>		 -->
   </body>
  
 </html>
