--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,12 @@
     <!-- Google font -->
 	  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet" />
 	  <!-- Font Awesome Icon -->
-	  <link rel="stylesheet" href="css/font-awesome.min.css" />
+	  <link rel="stylesheet" href="%PUBLIC_URL%/css/font-awesome.min.css" />
     <!-- Bootstrap -->
-		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
+		<link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
 		<!-- Slick -->
-		<link type="text/css" rel="stylesheet" href="css/slick.css" />
-		<link type="text/css" rel="stylesheet" href="css/slick-theme.css" />
+		<link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/css/slick.css" />
+		<link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/css/slick-theme.css" />
 		<!-- nouislider -->
 		<!-- <link type="text/css" rel="stylesheet" href="css/nouislider.min.css" />  -->
   </head>
@@ -43,9 +43,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!-- jQuery Plugins -->
-		<script src="js/jquery.min.js"></script>
-    <script src="js/jquery.zoom.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="%PUBLIC_URL%/js/jquery.min.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.zoom.min.js"></script>
+		<script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
 		<!-- <script src="js/slick.min.js"></script> -->
 		<!-- <script src="js/nouislider.min.js"></script>		 -->
   </body>
